did something in frontend folder

--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -1,26 +1,27 @@
-# Production Environment Variables Template
-# Copy this to your Vercel environment variables
-
-# Server Configuration
 NODE_ENV=production
 PORT=3000
-
-# Frontend URLs (for CORS) - UPDATE THESE WITH YOUR ACTUAL DOMAINS
-FRONTEND_URL=https://your-app.netlify.app
-FRONTEND_URL_WWW=https://www.your-domain.com
-
-# MongoDB Configuration - UPDATE WITH YOUR PRODUCTION DATABASE
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/suvidha_prod
-
-# JWT Configuration - GENERATE A STRONG SECRET
-JWT_SECRET=your-super-secure-production-jwt-secret-256-bits-minimum
+FRONTEND_URL=https://suvidha2026.netlify.app/
+MONGODB_URI=mongodb+srv://justcode790:Ankit790@cluster0forproject1.iz7lot1.mongodb.net/suvidha2026
+JWT_SECRET=ankittusharayushvk
 JWT_EXPIRE=7d
+ADMIN_EMAIL=admin@suvidha.gov.in
+ADMIN_PASSWORD=123456
+
+
+
+
 
 # Super Admin Bootstrap Configuration
-ADMIN_EMAIL=admin@yourdomain.com
-ADMIN_PASSWORD=YourSecurePassword123!
 
-# Cloudinary Configuration (for file uploads)
+PORT=5000
+NODE_ENV=production
+MONGO_URI=your_mongodb_atlas_url
+JWT_SECRET=your_secret
+FRONTEND_URL=http://localhost:3000
+
+
+
+
 CLOUDINARY_CLOUD_NAME=your-production-cloud-name
 CLOUDINARY_API_KEY=your-production-api-key
 CLOUDINARY_API_SECRET=your-production-api-secret
