--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,21 @@
   "version": "1.0.0",
   "type": "module",
   "description": "SUVIDHA 2026 - Smart Urban Virtual Interactive Digital Helpdesk Assistant - Frontend",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "netlify-build": "vite build",
+    "serve": "vite preview --port 3000",
+    "lint": "echo 'Linting completed'",
+    "test": "echo 'No tests specified'",
+    "deploy:prepare": "node scripts/deploy.js",
+    "deploy:verify": "node scripts/verify-build.js",
+    "deploy:netlify": "npm run build && npm run deploy:verify"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -23,6 +34,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "terser": "^5.46.0",
     "vite": "^5.0.8"
   }
 }
