added vercel setup in backend

--- a/frontend/.env.production.manual
+++ b/frontend/.env.production.manual
@@ -2,7 +2,7 @@
 # Copy this content to .env.production before building for deployment
 
 # Backend API URL (update with your actual backend URL)
-VITE_API_BASE_URL=http://13.60.195.81:5000/api
+VITE_API_BASE_URL=https://your-backend.vercel.app/api
 
 # App environment
 VITE_APP_ENV=production
