--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -13,27 +13,27 @@ ADMIN_PASSWORD=123456
 
 # Super Admin Bootstrap Configuration
 
-PORT=5000
-NODE_ENV=production
-MONGO_URI=your_mongodb_atlas_url
-JWT_SECRET=your_secret
-FRONTEND_URL=http://localhost:3000
+# PORT=5000
+# NODE_ENV=production
+# MONGO_URI=your_mongodb_atlas_url
+# JWT_SECRET=your_secret
+# FRONTEND_URL=http://localhost:3000
 
 
 
 
-CLOUDINARY_CLOUD_NAME=your-production-cloud-name
-CLOUDINARY_API_KEY=your-production-api-key
-CLOUDINARY_API_SECRET=your-production-api-secret
+# CLOUDINARY_CLOUD_NAME=your-production-cloud-name
+# CLOUDINARY_API_KEY=your-production-api-key
+# CLOUDINARY_API_SECRET=your-production-api-secret
 
-# OTP Configuration (for SMS service)
-OTP_SECRET=your-production-otp-secret
-SMS_API_KEY=your-sms-service-api-key
-SMS_API_SECRET=your-sms-service-secret
+# # OTP Configuration (for SMS service)
+# OTP_SECRET=your-production-otp-secret
+# SMS_API_KEY=your-sms-service-api-key
+# SMS_API_SECRET=your-sms-service-secret
 
-# Security Configuration
-BCRYPT_ROUNDS=12
+# # Security Configuration
+# BCRYPT_ROUNDS=12
 
-# Optional: Monitoring and Analytics
-SENTRY_DSN=https://your-sentry-dsn
-GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
+# # Optional: Monitoring and Analytics
+# SENTRY_DSN=https://your-sentry-dsn
+# GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
