--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -1,39 +1,33 @@
+# Production Environment Variables for Vercel
+# Set these in Vercel Dashboard → Project → Settings → Environment Variables
+
+# Server Configuration
 NODE_ENV=production
-PORT=3000
-FRONTEND_URL=https://suvidha2026.netlify.app/
-MONGODB_URI=mongodb+srv://justcode790:Ankit790@cluster0forproject1.iz7lot1.mongodb.net/suvidha2026
-JWT_SECRET=ankittusharayushvk
+PORT=5000
+
+# Frontend URLs (for CORS) - UPDATE WITH YOUR NETLIFY URL
+FRONTEND_URL=https://your-app.netlify.app
+FRONTEND_URL_WWW=https://your-app.netlify.app
+
+# MongoDB Configuration (MongoDB Atlas)
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/suvidha_prod?retryWrites=true&w=majority
+
+# JWT Configuration
+JWT_SECRET=your-super-secure-production-jwt-secret-256-bits-minimum
 JWT_EXPIRE=7d
-ADMIN_EMAIL=admin@suvidha.gov.in
-ADMIN_PASSWORD=123456
-
-
-
-
 
 # Super Admin Bootstrap Configuration
+ADMIN_EMAIL=admin@yourdomain.com
+ADMIN_PASSWORD=YourSecurePassword123!
+ADMIN_NAME=System Administrator
 
-# PORT=5000
-# NODE_ENV=production
-# MONGO_URI=your_mongodb_atlas_url
-# JWT_SECRET=your_secret
-# FRONTEND_URL=http://localhost:3000
+# Cloudinary Configuration (Optional)
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
 
+# OTP Configuration
+OTP_SECRET=your-production-otp-secret
 
-
-
-# CLOUDINARY_CLOUD_NAME=your-production-cloud-name
-# CLOUDINARY_API_KEY=your-production-api-key
-# CLOUDINARY_API_SECRET=your-production-api-secret
-
-# # OTP Configuration (for SMS service)
-# OTP_SECRET=your-production-otp-secret
-# SMS_API_KEY=your-sms-service-api-key
-# SMS_API_SECRET=your-sms-service-secret
-
-# # Security Configuration
-# BCRYPT_ROUNDS=12
-
-# # Optional: Monitoring and Analytics
-# SENTRY_DSN=https://your-sentry-dsn
-# GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
+# Security Configuration
+BCRYPT_ROUNDS=12
