added reciept part QR

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -7,6 +7,9 @@ VITE_API_BASE_URL=https://cdac-rosy.vercel.app/api
 # App environment
 VITE_APP_ENV=production
 
+# Logo Configuration
+VITE_LOGO_URL=/logo.png
+
 # Optional: Analytics (uncomment and configure if needed)
 # VITE_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
 
