--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,19 +14,15 @@
     "serve": "vite preview --port 3000",
     "lint": "echo 'Linting completed'",
     "test": "echo 'No tests specified'",
-    
     "setup": "node scripts/quick-setup.js",
-    
     "build:netlify": "node scripts/build-for-netlify.js",
     "build:production": "vite build --mode production",
     "build:local": "vite build --mode development",
-    
     "env:list": "node scripts/switch-env.js list",
     "env:switch": "node scripts/switch-env.js switch",
     "env:local": "node scripts/switch-env.js switch local",
     "env:remote": "node scripts/switch-env.js switch remote",
     "env:production": "node scripts/switch-env.js switch production",
-    
     "deploy:prepare": "node scripts/deploy.js",
     "deploy:verify": "node scripts/verify-build.js",
     "deploy:manual": "npm run build:netlify"
@@ -35,8 +31,10 @@
     "axios": "^1.6.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-idle-timer": "^5.7.2",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
