--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -7,6 +7,9 @@ VITE_API_BASE_URL=https://cdac-rosy.vercel.app/api
 # App environment
 VITE_APP_ENV=production
 
+# Demo/Hackathon Mode - ENABLED FOR PRODUCTION
+VITE_SHOW_DEMO_CREDENTIALS=true
+
 # Logo Configuration
 VITE_LOGO_URL=/logo.png
 
